# ddlb

./: .devcontainer.json  .gitignore  .lintrunner.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ddlb/: __init__.py  benchmark.py  communicator.py  envs.py
ddlb/cli/: __init__.py  benchmark.py
ddlb/primitives/: __init__.py
ddlb/primitives/SP_TP_Rowwise/: __init__.py  compute_only.py  fuser.py  jax_tp.py  pytorch.py  sp_tp_rowwise.py  transformer_engine.py  utils.py
ddlb/primitives/TPColumnwise/: __init__.py  compute_only.py  ddlp.py  fuser.py  jax_tp.py  pytorch.py  pytorch_sym_mem.py  reference_compute_only.py  tp_columnwise.py  transformer_engine.py  utils.py
ddlb/primitives/TPRowwise/: __init__.py  custom_kernel.py  fuser.py  pytorch.py  tp_rowwise.py  transformer_engine.py  utils.py
ddlb/primitives/TPRowwise/kernels/: tp_rowwise_cublas_nccl.cu  tp_rowwise_naive_nccl.cu
docs/source/: conf.py  index.rst
examples/: benchmark.py  benchmark_config.json
scripts/: config.json  config_tp_rowwise.json  run_benchmark.py
tests/: __init__.py
